# claw-chain

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  REVIEW.md  ROADMAP.md  STAKING_IMPLEMENTATION.md
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  cla-signatures.json  cspell.json  labeler.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: agent-lint.yml  cla-check.yml  contributor-tracking.yml  documentation-check.yml  greet-new-contributors.yml  pallet-audit.yml  pr-labeler.yml  rust-ci.yml  security.yml  stale-issues.yml  validator-docker.yml
branding/: README.md
chain-spec/: README.md  clawchain-mainnet.json  clawchain-staging-plain.json  clawchain-staging.json
deploy/: .env.example  Dockerfile.validator  clawchain.service  docker-compose.validator.yml  docker-entrypoint.sh  setup-node.sh
docs/: ARCHITECTURE.md  CONVENTIONS.md  EXECUTION_PLAN_TEMPLATE.md  GENESIS.md  QUALITY.md  VALIDATOR-SETUP.md  VALIDATOR.md  VALIDATOR_INCENTIVES.md  authority-rotation.md  development.md  security-audit-2026-02.md  tokenomics.md
docs/api/: rpc-endpoints.md  typescript-sdk.md
docs/architecture/: consensus.md  development.md  overview.md  pallet-agent-equity-bridge.md  pallets.md  security.md
docs/getting-started/: quickstart.md  testnet.md
docs/guides/: deploy-node.md  validator-setup.md
docs/internal/: README.md  pallet-delivery-summary.md  pallet-wiring.md  staking-status.md
docs/rfc/: RFC-001-audit-attestation.md  RFC-002-reputation-regime-multiplier.md  RFC-003-moral-foundation.md
faucet/: .env.example  Dockerfile  docker-compose.yml  jest.config.ts  package-lock.json  package.json  tsconfig.json
faucet/__tests__/: faucet.test.ts  rateLimit.test.ts  validate.test.ts
faucet/src/: config.ts  index.ts
faucet/src/routes/: faucet.ts
faucet/src/services/: chain.ts  rateLimit.ts
faucet/src/utils/: logger.ts  validate.ts
node/src/: chain_spec.rs  cli.rs  command.rs  service.rs
pallets/agent-did/: Cargo.toml
pallets/agent-did/src/: lib.rs  tests.rs
pallets/agent-receipts/: Cargo.toml  README.md
pallets/agent-receipts/src/: lib.rs  tests.rs
pallets/agent-registry/: Cargo.toml
pallets/agent-registry/src/: lib.rs  tests.rs
pallets/anon-messaging/: Cargo.toml
pallets/anon-messaging/src/: lib.rs  tests.rs  types.rs  weights.rs
pallets/anon-messaging/src/tests/: mock.rs  mod.rs  test_auto_reply.rs  test_ephemeral.rs  test_escrow.rs  test_keys.rs  test_messaging.rs
pallets/audit-attestation/: Cargo.toml
pallets/audit-attestation/src/: lib.rs  mock.rs  tests.rs
pallets/claw-token/: Cargo.toml
pallets/claw-token/src/: lib.rs  tests.rs
pallets/emergency-pause/: Cargo.toml
pallets/emergency-pause/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/gas-quota/: Cargo.toml
pallets/gas-quota/src/: lib.rs  tests.rs
pallets/ibc-lite/: Cargo.toml  README.md
pallets/ibc-lite/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/moral-foundation/: Cargo.toml
pallets/moral-foundation/src/: lib.rs  tests.rs
pallets/quadratic-governance/: Cargo.toml
pallets/quadratic-governance/src/: lib.rs  tests.rs
pallets/reputation/: Cargo.toml
pallets/reputation-regime/: Cargo.toml
pallets/reputation-regime/src/: lib.rs  tests.rs  types.rs
pallets/reputation/src/: lib.rs  tests.rs
pallets/rpc-registry/: Cargo.toml
pallets/rpc-registry/src/: lib.rs  tests.rs
pallets/service-market/: Cargo.toml
pallets/service-market/src/: lib.rs  tests.rs
pallets/task-market/: Cargo.toml
pallets/task-market/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: agent-lint.sh  setup-node.sh
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: create-task.ts  register-agent.ts
sdk/typescript/src/: agents.ts  client.ts  index.ts  tasks.ts  types.ts
services/explorer/: .env.example  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
services/explorer/src/app/: globals.css  layout.tsx  page.tsx
services/explorer/src/app/blocks/: page.tsx
services/explorer/src/app/tx/[hash]/: page.tsx
services/explorer/src/components/: AgentProfile.tsx  BlockDetail.tsx  BlockList.tsx  ErrorState.tsx  Header.tsx  LiveIndicator.tsx  LoadingState.tsx  TxDetail.tsx
services/explorer/src/hooks/: useAgent.ts  useApi.ts  useBlock.ts  useNewHeads.ts  useTx.ts
services/explorer/src/lib/: api.ts  format.ts  types.ts
services/explorer/src/providers/: ApiProvider.tsx
services/explorer/src/test/components/: AgentProfile.test.tsx  BlockDetail.test.tsx  BlockList.test.tsx  ErrorState.test.tsx  Header.test.tsx  LiveIndicator.test.tsx  LoadingState.test.tsx  TxDetail.test.tsx
services/explorer/src/test/hooks/: useAgent.test.ts  useApi.test.ts  useBlock.test.ts  useNewHeads.test.ts  useTx.test.ts
services/explorer/src/test/lib/: api.test.ts  format.test.ts
services/faucet/: .env.example  Dockerfile  README.md  package-lock.json  package.json
services/faucet/public/: index.html
services/faucet/src/: chain.ts  config.ts  db.ts  index.ts  server.ts
services/faucet/src/middleware/: rateLimit.ts
services/faucet/src/routes/: auth.ts  faucet.ts  status.ts
services/faucet/tests/: db.test.ts  faucet.test.ts  rateLimit.test.ts
services/openclaw-plugin/: README.md  SKILL.md  package-lock.json  package.json  tsconfig.json
services/openclaw-plugin/src/: config.ts  index.ts  plugin.ts
services/openclaw-plugin/src/did/: registrar.ts
services/openclaw-plugin/src/rpc/: client.ts
services/openclaw-plugin/src/status/: checker.ts
services/openclaw-plugin/tests/: config.test.ts  did-registrar.test.ts  plugin.test.ts  rpc-client.test.ts  status-checker.test.ts
services/openclaw-plugin/tests/__mocks__/@polkadot/: api.ts  keyring.ts  util-crypto.ts
whitepaper/: TECHNICAL_SPEC.md  TOKENOMICS.md  WHITEPAPER.md
(+2 files in other folders)
