[workspace]
members = [
    "node",
    "runtime",
    "pallets/agent-registry",
    "pallets/agent-did",
    "pallets/claw-token",
    "pallets/reputation",
    "pallets/task-market",
    "pallets/service-market",
    "pallets/quadratic-governance",
    "pallets/agent-receipts",
]
resolver = "2"

[workspace.package]
authors = ["ClawChain Contributors"]
edition = "2021"
repository = "https://github.com/clawinfra/claw-chain"
license = "Apache-2.0"

[workspace.dependencies]
# Codec
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

# Substrate primitives
sp-api = { version = "40.0", default-features = false }
sp-block-builder = { version = "40.0", default-features = false }
sp-consensus-aura = { version = "0.46", default-features = false }
sp-consensus-grandpa = { version = "27.0", default-features = false }
sp-core = { version = "39.0", default-features = false }
sp-genesis-builder = { version = "0.21", default-features = false }
sp-inherents = { version = "40.0", default-features = false }
sp-io = { version = "44.0", default-features = false }
sp-keyring = { version = "45.0" }
sp-offchain = { version = "40.0", default-features = false }
sp-runtime = { version = "45.0", default-features = false }
sp-session = { version = "42.0", default-features = false }
sp-staking = { version = "42.1", default-features = false }
sp-storage = { version = "22.0", default-features = false }
sp-transaction-pool = { version = "40.0", default-features = false }
sp-version = { version = "43.0", default-features = false }
sp-weights = { version = "33.2", default-features = false }
sp-tracing = { version = "19.0", default-features = false }
sp-npos-elections = { version = "40.0", default-features = false }

# Substrate client
sc-basic-authorship = { version = "0.53" }
sc-chain-spec = { version = "48.0" }
sc-cli = { version = "0.57" }
sc-client-api = { version = "44.0" }
sc-consensus = { version = "0.54" }
sc-consensus-aura = { version = "0.55" }
sc-consensus-grandpa = { version = "0.40" }
sc-executor = { version = "0.47" }
sc-keystore = { version = "39.0" }
sc-network = { version = "0.55" }
sc-offchain = { version = "50.0" }
sc-service = { version = "0.56" }
sc-telemetry = { version = "30.0" }
sc-transaction-pool = { version = "44.1" }
sc-transaction-pool-api = { version = "43.0" }
sc-rpc-api = { version = "0.54" }

# Substrate FRAME
frame-benchmarking = { version = "45.0", default-features = false }
frame-executive = { version = "45.0", default-features = false }
frame-support = { version = "45.1", default-features = false }
frame-system = { version = "45.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0", default-features = false }
frame-try-runtime = { version = "0.51", default-features = false }

# Substrate pallets
pallet-aura = { version = "44.0", default-features = false }
pallet-authorship = { version = "45.0", default-features = false }
pallet-bags-list = { version = "44.0", default-features = false }
pallet-balances = { version = "46.0", default-features = false }
pallet-election-provider-multi-phase = { version = "44.0", default-features = false }
pallet-grandpa = { version = "45.0", default-features = false }
pallet-offences = { version = "44.0", default-features = false }
pallet-session = { version = "45.1", default-features = false }
pallet-staking = { version = "45.0", default-features = false }
pallet-staking-reward-curve = { version = "11.0" }
pallet-sudo = { version = "45.0", default-features = false }
pallet-timestamp = { version = "44.0", default-features = false }
pallet-transaction-payment = { version = "45.0", default-features = false }
pallet-transaction-payment-rpc = { version = "48.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0", default-features = false }
pallet-treasury = { version = "44.0", default-features = false }
frame-election-provider-support = { version = "45.0", default-features = false }

# Other Substrate
substrate-build-script-utils = { version = "11.0" }
substrate-frame-rpc-system = { version = "49.0" }
substrate-wasm-builder = { version = "31.1" }

# ClawChain pallets
pallet-agent-registry = { path = "pallets/agent-registry", default-features = false }
pallet-agent-did = { path = "pallets/agent-did", default-features = false }
pallet-claw-token = { path = "pallets/claw-token", default-features = false }
pallet-reputation = { path = "pallets/reputation", default-features = false }
pallet-task-market = { path = "pallets/task-market", default-features = false }
pallet-gas-quota = { path = "pallets/gas-quota", default-features = false }
pallet-rpc-registry = { path = "pallets/rpc-registry", default-features = false }
pallet-quadratic-governance = { path = "pallets/quadratic-governance", default-features = false }
pallet-agent-receipts = { path = "pallets/agent-receipts", default-features = false }
pallet-service-market = { path = "pallets/service-market", default-features = false }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

# Misc
log = { version = "0.4", default-features = false }
clap = { version = "4.5", features = ["derive"] }
jsonrpsee = { version = "0.24", features = ["server"] }
futures = { version = "0.3" }

[profile.release]
panic = "unwind"
