[package]
name = "pallet-quadratic-governance"
version = "0.1.0"
description = "ClawChain Quadratic Governance Pallet — quadratic voting with DID sybil resistance (ADR-004)"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }

# FRAME
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Substrate primitives
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

# ClawChain pallets
pallet-agent-did = { path = "../agent-did", default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-agent-did = { path = "../agent-did", default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "pallet-agent-did/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
